xboxdrv 0.2 - (03/May/2008)
===========================

* added support for Xbox360 wireless gamepads
* added support for the Xbox360 guitar controller
* added --dpad-only option for apps that don't need analogsticks
* added --axismap option to remap the axes
* added --buttonmap option to remap the buttons
* added option to specify the USB path to use, instead of using
  automatic detection
* added option to enforce the controller type
* added deadzone configuration support
* switched from usb_bulk_read() to usb_interrupt_read(), this fixes
  problems with some controller


xboxdrv 0.1 - (13/Apr/2008)
===========================
  * initial release

# EOF #