@@ -40,7 +40,7 @@ public:
   void set_rumble(uint8_t left, uint8_t right);
   void set_led(uint8_t status);
   void send_raw(char* buffer, int len);
-  bool read(XboxGenericMsg& msg);
+  bool read(XboxGenericMsg& msg, bool verbose);
 
 private:
   Xbox360Controller (const Xbox360Controller&);
