@@ -37,7 +37,7 @@ public:
 
   void set_rumble(uint8_t left, uint8_t right);
   void set_led(uint8_t status);
-  bool read(XboxGenericMsg& msg);
+  bool read(XboxGenericMsg& msg, bool verbose);
 
 private:
   XboxController (const XboxController&);
