@@ -30,7 +30,7 @@ public:
   virtual void set_rumble(uint8_t left, uint8_t right) =0;
   virtual void set_led(uint8_t status)   =0;
   virtual void send_raw(char* buffer, int len) {}
-  virtual bool read(XboxGenericMsg& msg) =0;
+  virtual bool read(XboxGenericMsg& msg, bool verbose) =0;
 
 private:
   XboxGenericController (const XboxGenericController&);
